--- a/scss/_course.scss
+++ b/scss/_course.scss
@@ -3484,21 +3484,65 @@ span.editinstructions {
         animation-duration: 0.68s;
     }
     #page-header .page-header-headings h1 {
+        font-size: 2.5rem;
+    }
+    #page-header .page-header-headings h1 {
         font-weight: 400;
         font-size: 2.5rem;
     }
     #page-header {
-      box-shadow:
-              0px 1px 3px 0px rgba(226, 226, 226, 0.20),
-              0px 2px 1px 0px rgba(226, 226, 226, 0.12),
-              0px 1px 1px 0px rgba(226, 226, 226, 0.14);
-      margin-bottom: 0.1em;
-      &.mast-image {
         box-shadow:
-                0px 1px 3px 0px rgba(40, 40, 40, 0.20),
+                0px 1px 3px 0px rgba(226, 226, 226, 0.20),
+                0px 2px 1px 0px rgba(226, 226, 226, 0.12),
+                0px 1px 1px 0px rgba(226, 226, 226, 0.14);
+        margin-bottom: 0.1em;
+        &.mast-image {
+            @include media-breakpoint-up(lg) {
+                box-shadow: 0px 1px 3px 0px rgba(40, 40, 40, 0.20),
                 0px 2px 1px 0px rgba(40, 40, 40, 0.12),
                 0px 1px 1px 0px rgba(40, 40, 40, 0.14);
-      }
+            }
+        }
+    }
+}
+
+body.path-course {
+    #page-header .page-header-headings h1 {
+        font-weight: 400;
+        font-size: 2.5rem;
+    }
+    #page-header.mast-image .page-header-headings h1 {
+        @include media-breakpoint-down(lg) {
+           font-size: 2rem;
+        }
+        @include media-breakpoint-up(lg) {
+            @include media-breakpoint-down(xl) {
+                font-size: 1.5vw;
+            }
+        }
+        @include media-breakpoint-up(xl) {
+            font-size: clamp(1rem, 1.8vw, 2.5rem);
+        }
+    }
+
+    @media (min-width: 1400px) {
+        body.path-course #page-header.mast-image .page-header-headings h1 {
+            font-size: clamp(1rem, 2.5vw, 2.5rem);
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    body.path-course #moodle-page #page-header.mast-image {
+        aspect-ratio: unset;
+        background: none !important;
+    }
+    #page-header.mast-image .page-header-headings h1 a {
+        color: $brand-primary;
+        text-shadow: none;
+    }
+    #page-header #snap-coverimagecontrol {
+        display: none;
     }
 }
 
